2000-04-06  Seth Alves  <alves@hungry.com>

	* gui/calendar-commands.c (calendar_control_activate): removed
	uih from the argument list, added cal.  use cal as user_data
	in callbacks rather than the control.
	(calendar_control_deactivate): removed uih from argument list

2000-04-05  Seth Alves  <alves@hungry.com>

	* gui/calendar-commands.c (setup_menu): removed
	(setup_appbar): removed
	(calendar_control_activate): new function -- does the work
	that setup_appbar and setup_menu used to do.
	(calendar_control_deactivate): undoes what calendar_control_activate
	does by removing the toolbar items and menu items.

	* gui/Makefile.am: build test-calendar-widget and evolution-calendar,
	common stuff is in a library

	* gui/gnome-cal.c (gnome_calendar_get_type): made the calendar widget
	based on a gtk_frame rather than a gnome_app

	* gui/calendar-commands.c: split out some of main.c

	* gui/evolution-calendar-control.c: bonobo bung so evolution
	can use the calendar widget

2000-04-01  Matt Loper  <matt@helixcode.com>

	* pcs/.cvsignore: Added *.lo.

2000-03-30  Seth Alves  <alves@hungry.com>

        * gui/main.c (calendar_get_events_in_range):
        cal_client_get_events_in_range returns a list of CalObjInstance *, not
        a list of (char *) uid.

	* Makefile.am (SUBDIRS): readded the gui directory

	* gui/main.c: temporarily added alarm_defaults back in,
	since the calendar doesn't link without it

2000-03-29  Matt Loper  <matt@helixcode.com>

	* Makefile.am: remove the gui directory, which doesn't compile.

2000-03-28  Matt Loper  <matt@helixcode.com>

	* pcs/Makefile.am: create a libpcs.la library, for use in the
	wombat.

2000-03-28  Seth Alves  <alves@hungry.com>

	* gui/Makefile.am (LINK_FLAGS): added libeutil.la and libetext.a

	* gui/main.c (calendar_iterate): switch from string_to_ical_object to
	ical_object_find_in_string
	(calendar_get_events_in_range): same
	(session_save_state): commented out references
	to gcal->client->filename
